trace: added autosaving requests to admin stores
